--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -1,2 +1,35 @@
 .testing {
   width: 71.42857%; }
+
+#parent {
+  width: 300px;
+  height: 300px;
+  position: absolute;
+  top: 160px;
+  left: 200px;
+  background-color: #ffae00; }
+
+#enfant {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 50px;
+  left: 100px;
+  background-color: #e25151; }
+
+body {
+  margin: 10px;
+  padding: 20px; }
+
+#div {
+  position: absolute;
+  top: 260px;
+  left: 400px;
+  width: 250px;
+  height: 250px;
+  background-color: #54aeb1;
+  padding: 35px;
+  margin: 35px;
+  border-width: 6px;
+  border-color: black;
+  border-style: solid; }
