--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -1,3 +1,40 @@
 .testing {
   width: percentage(5/7);
 }
+
+#parent {
+  width: 300px;
+  height:300px;
+  position: absolute;
+  top: 160px;
+  left: 200px;
+  background-color: rgb(255, 174, 0);
+}
+  
+#enfant {
+  width: 100px;
+  height:100px;
+  position: absolute;
+  top: 50px;
+  left: 100px;
+  background-color: #e25151;
+}
+
+body{
+  margin: 10px;
+  padding: 20px;
+}
+
+#div {
+  position: absolute;
+  top: 260px;
+  left: 400px;
+  width: 250px;
+  height: 250px;
+  background-color: #54aeb1;
+  padding: 35px;
+  margin: 35px;
+  border-width : 6px;
+  border-color: black;
+  border-style: solid;
+}
