jeu de la souris Event mouseover

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -42,3 +42,11 @@ body{
   border-color: black;
   border-style: solid;
 }
+
+// #div2{
+//   width: 200px;  
+//   height: 200px;
+//   overflow: scroll;
+//   background-color: #ffff0094;
+//   border: 2px black solid;
+// }
