--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -36,3 +36,10 @@ body {
   border-width: 6px;
   border-color: black;
   border-style: solid; }
+
+#div2 {
+  width: 200px;
+  height: 200px;
+  overflow: scroll;
+  background-color: #ffff0094;
+  border: 2px black solid; }
