--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -43,10 +43,10 @@ body{
   border-style: solid;
 }
 
-// #div2{
-//   width: 200px;  
-//   height: 200px;
-//   overflow: scroll;
-//   background-color: #ffff0094;
-//   border: 2px black solid;
-// }
+#div2{
+  width: 200px;  
+  height: 200px;
+  overflow: scroll;
+  background-color: #ffff0094;
+  border: 2px black solid;
+}
